--- a/src/app/front/components/forgot-password/forgot-password.component.html
+++ b/src/app/front/components/forgot-password/forgot-password.component.html
@@ -12,12 +12,17 @@
                                                  class="img-responsive"/></span><span>Reset your password</span>
               </h3>
               <p>Enter your email address and we'll email you a link to reset your password.</p>
+              <div #signUpError>
+                <div class="alert alert-danger fade in" *ngIf="isError">
+                  {{errorMsg}}
+                </div>
+              </div>
+              <h4 *ngIf="isMailSent">A mail with reset link has been sent to you.Please check your email account.</h4>
               <form>
                 <div class="form-group">
                   <label class="srOnly">Email</label>
                   <input type="text" name="eId" placeholder="Email" #emailId>
                 </div>
-
                 <input type="button" value="Submit" class="formBtn" (click)="onBtnSubmitClick(emailId.value)">
               </form>
 
