--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -12,6 +12,7 @@
               <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
                                                  class="img-responsive"/></span><span>Login</span></h3>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <p *ngIf="msg">{{msg}}</p>
               <form [formGroup]="loginForm">
                 <div class="form-group">
                   <label class="srOnly">Email</label>
@@ -33,7 +34,7 @@
                     <label class="rmbrMe" for="rememberMe">Remember Me</label>
                   </div>
 
-                  <a href="forgot_password.html" class="frgtPsswd">Forgot my Password?</a>
+                  <a routerLink="/forgot-password" class="frgtPsswd">Forgot my Password?</a>
                 </div>
 
                 <input type="button" value="Login" (click)="onSignInBtnClick()" class="formBtn"
