--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -52,7 +52,9 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a routerLink="">Home<span class="sr-only">(current)</span></a>
               </li>
-              <li><a>Forums</a></li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a target="_blank" href="http://forum.dfsportgod.com/forum/">Forums</a>
+              </li>
               <li><a>Products</a></li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/articles">Articles</a>
@@ -78,18 +80,18 @@
                   Go to Dashboard
                 </a>
               </li>
-              <li class="searchBtn">
-                <a href="javascript:void(0)"><img src="../../../../assets/images/search_icn.png" alt="LOGO"
-                                                  class="img-responsive"/></a>
-                <div class="srchBar">
-                  <div class="form-group">
-                    <label class="srOnly">Search</label>
-                    <input type="text" name="search" placeholder="Search">
-                  </div>
-                  <button type="button"><img src="../../../../assets/images/search_icn.png" alt="LOGO"
-                                             class="img-responsive"/></button>
-                </div>
-              </li>
+              <!--<li class="searchBtn">-->
+                <!--<a href="javascript:void(0)"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
+                                                  <!--class="img-responsive"/></a>-->
+                <!--<div class="srchBar">-->
+                  <!--<div class="form-group">-->
+                    <!--<label class="srOnly">Search</label>-->
+                    <!--<input type="text" name="search" placeholder="Search">-->
+                  <!--</div>-->
+                  <!--<button type="button"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
+                                             <!--class="img-responsive"/></button>-->
+                <!--</div>-->
+              <!--</li>-->
             </ul>
           </div>
         </div>
