--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -46,10 +46,10 @@
                   </div>
                   <div class="col-md-6">
                     <div class="filter-range-container">
-                      <h4 class="rangeslider-value">Number Of Lineups To Produce: <span id="nlpSliderVal">10</span>
+                      <h4 class="rangeslider-value">Number Of Lineups To Produce: <span id="nlpSliderVal">1</span>
                       </h4>
                       <input id="nlp" type="text"/>
-                      <span class="slider-range slider-min">0</span><span class="slider-range slider-max">200</span>
+                      <span class="slider-range slider-min">1</span><span class="slider-range slider-max">200</span>
                     </div>
                   </div>
                 </div>
@@ -57,16 +57,16 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="filter-range-container">
-                      <h4 class="rangeslider-value">Number Of Unique Players: <span id="nupSliderVal">4</span></h4>
+                      <h4 class="rangeslider-value">Number Of Unique Players: <span id="nupSliderVal">1</span></h4>
                       <input id="nup" type="text"/>
                       <span class="slider-range slider-min">1</span><span class="slider-range slider-max">5</span>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="filter-range-container">
-                      <h4 class="rangeslider-value">Max Exposure: <span id="meSliderVal">20%</span></h4>
+                      <h4 class="rangeslider-value">Max Exposure: <span id="meSliderVal">10%</span></h4>
                       <input id="me" type="text"/>
-                      <span class="slider-range slider-min">0</span><span class="slider-range slider-max">100%</span>
+                      <span class="slider-range slider-min">10%</span><span class="slider-range slider-max">100%</span>
                     </div>
                   </div>
                 </div>
@@ -74,10 +74,11 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="filter-range-container">
-                      <h4 class="rangeslider-value">Min/Max Salary: <span id="mmsSliderVal">$50000</span></h4>
+                      <h4 class="rangeslider-value">Min/Max Salary:
+                        <span id="mmsSliderVal">{{salarySettingValue[0]}}-{{salarySettingValue[1]}}</span></h4>
                       <input id="mms" type="text"/>
-                      <span class="slider-range slider-min">{{advFilterSettings?.salaryMin}}</span><span
-                      class="slider-range slider-max">{{advFilterSettings?.salaryMax}}</span>
+                      <span class="slider-range slider-min">{{salarySettingValue[0]}}</span><span
+                      class="slider-range slider-max">{{salarySettingValue[1]}}</span>
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -147,7 +148,7 @@
                           </span>
                           </h4>
                           <input id="BattingOrder" type="text"/>
-                          <span class="slider-range slider-min">1</span><span class="slider-range slider-max">9</span>
+                          <span class="slider-range slider-min">0</span><span class="slider-range slider-max">9</span>
                         </div>
                       </div>
                     </div>
@@ -156,9 +157,17 @@
 
                   <!-- Right -->
                   <div class="col-md-7">
-                    <h4 class="filters-h">Players Per Team <span>( Change All Max )</span></h4>
                     <div class="row">
-                      <div class="col-md-12 table-responsive">
+                      <div class="col-md-6 col-xs-8">
+                        <h4 class="filters-h">Players Per Team </h4>
+                      </div>
+                      <div class="col-md-4 col-xs-2">
+                        <input class="form-control input-sm margin-bottom-10" (input)="onGlobalMaxValueChanged($event)" [value]="getMaxGameValue()" type="text"
+                               placeholder="Max">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12 table-responsive team-table-container">
                         <table class="table td-center team-table">
                           <thead>
                           <tr>
@@ -173,18 +182,22 @@
                           </thead>
                           <tbody *ngIf="advFilterSettings">
                           <tr *ngFor="let game of advFilterSettings.games">
-                            <td><input class="form-control no-border" [(ngModel)]="game.homeTeamMinValue">
+                            <td><input style="width: 56px" class="form-control"
+                                       [(ngModel)]="game.homeTeamMinValue">
                             </td>
-                            <td class="td-team"><img style="width: 100px;height: 60px" [attr.src]="game.homeTeamLogo"
+                            <td class="td-team"><img style="width: 70px;height: 40px" [attr.src]="game.homeTeamLogo"
                                                      (click)="onGameClick(game)"/></td>
-                            <td><input class="form-control no-border" [(ngModel)]="game.homeTeamMaxValue">
+                            <td><input style="width: 56px" class="form-control"
+                                       [(ngModel)]="game.homeTeamMaxValue">
                             </td>
                             <td>@</td>
-                            <td><input class="form-control no-border" [(ngModel)]="game.awayTeamMinValue">
+                            <td><input style="width: 56px" class="form-control"
+                                       [(ngModel)]="game.awayTeamMinValue">
                             </td>
-                            <td class="td-team"><img style="width: 100px;height: 60px" [attr.src]="game.awayTeamLogo"/>
+                            <td class="td-team"><img style="width: 70px;height: 40px" [attr.src]="game.awayTeamLogo"/>
                             </td>
-                            <td><input class="form-control no-border" [(ngModel)]="game.awayTeamMaxValue">
+                            <td><input style="width: 56px" class="form-control"
+                                       [(ngModel)]="game.awayTeamMaxValue">
                             </td>
                           </tr>
                           </tbody>
