--- a/src/assets/css/main-responsive.css
+++ b/src/assets/css/main-responsive.css
@@ -9,6 +9,18 @@
 
     }
 
+    /*
+    Forms
+    */
+
+    .form-inline .form-control {
+        margin-bottom: 10px;
+    }
+
+    .text-right.sm-text-left {
+        text-align: left
+    }
+
     .table-container.table-responsive {
         width: auto ;
     }
@@ -152,11 +164,20 @@
 
 @media (min-width: 768px)
 {
-    .navbar-collapse.collapse {}
+
 }
 
 @media (max-width:1200px)
 {  
+    
+    .input-group .form-control,
+    .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group {
+        z-index: initial ;
+    }
+    .md-text-center {
+        text-align: center ; 
+    }
+
     .navbar.navbar-opp {
         z-index: 1;    
     }
@@ -166,9 +187,9 @@
         z-index: 9999;
         background: rgba(0,0,0,0.92) ;
         width: 100%;
-        height: 100%;
+        height: 100%!important;
         top: 0;
-        left: 100%;
+        right: 100%;
         transition: all 0.5s ease;
         -ms-transition: all 0.5s ease;
         -webkit-transition: all 0.5s ease;
@@ -176,7 +197,11 @@
         -moz-transition: all 0.5s ease;
         overflow: auto;
     }
-    
+
+    #navbar.navbar-collapse.in {
+        right: 0 ;
+    }
+
     .closeBtn {
         display: block;
         position: absolute;
@@ -220,8 +245,32 @@
 }
 
 @media (min-width: 767px) and (max-width:1200px) {
-    .navbar-toggle { display: block !important ;}
-    
+    .navbar-toggle { 
+        display: block !important ;
+    }
+
+    .navbar-header {
+        float: none;
+    }
+    .container-nav #navbar .navbar-nav>li,
+    .container-nav #navbar .navbar-right.main-nav {
+        float: none!important;
+    }
+    .container-fluid.container-nav {
+        position: relative ;
+    }
+
+    .navbar-opp .navbar-brand {
+        padding: 20px 15px;
+        height: 65px;
+    }
+
+    .navbar-nav.nav-buttons {
+        position: absolute ;
+        top: 0px;
+        right: 77px;
+    }
+
     .navbar-first {
         padding-right: 15px;
     }
@@ -240,4 +289,23 @@
         font-size: 14px ;
         line-height: 21px;
     }
+}
+
+@media (min-width: 1200px) {
+    .filter-form #draftkings-select {
+        width: 170px;
+        max-width: 100% ;
+    }.filter-form #main-select, .filter-form #mlb-select {
+        width: 130px;
+        max-width: 100% ;
+    }
+    .table-filtes-container.section-gray input.file-upl {
+        background-color: #fff;
+        width: 310px;
+    }
+    .table-filtes-container.section-gray select#download-select {
+        width: 200px;
+        max-width: 100%;
+    }
+    
 }
