- WP Signup updated

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -874,8 +874,8 @@
             <li role="presentation"><a href="#fcebok" aria-controls="fcebok" role="tab"
                                        data-toggle="tab"><img src="../../../../assets/images/facebook_icn.png" alt=""
                                                               class="img-responsive"/></a></li>
-            <li role="presentation"><a href="#insta" aria-controls="insta" role="tab" data-toggle="tab"><img
-              src="../../../../assets/images/insta_icn.png" alt="" class="img-responsive"/></a></li>
+            <!--<li role="presentation"><a href="#insta" aria-controls="insta" role="tab" data-toggle="tab"><img-->
+              <!--src="../../../../assets/images/insta_icn.png" alt="" class="img-responsive"/></a></li>-->
           </ul>
 
           <!-- Tab panes -->
