--- a/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
+++ b/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
@@ -29,13 +29,25 @@
         <div class="col-lg-12">
           <div class="btn-group btn-group-justified btn-group-noradius filter-buttons" role="group" aria-label="...">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-lg btn-grayl-grayl active">ALL</button>
+              <button type="button"
+                      (click)="activeUsedPlayerTab = 'all'"
+                      [class.active]="activeUsedPlayerTab == 'all'"
+                      class="btn btn-lg btn-grayl-grayl">ALL
+              </button>
             </div>
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-lg btn-grayl-grayl">P</button>
+              <button type="button"
+                      (click)="activeUsedPlayerTab = 'p'"
+                      [class.active]="activeUsedPlayerTab == 'p'"
+                      class="btn btn-lg btn-grayl-grayl">P
+              </button>
             </div>
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-lg btn-grayl-grayl">H</button>
+              <button type="button"
+                      (click)="activeUsedPlayerTab = 'h'"
+                      [class.active]="activeUsedPlayerTab == 'h'"
+                      class="btn btn-lg btn-grayl-grayl">H
+              </button>
             </div>
           </div>
         </div>
@@ -44,7 +56,7 @@
       <div class="row">
         <div class="col-lg-12 table-responsive">
           <table class="table table-black table-gen-lin">
-            <tr *ngFor="let player of usedPlayers">
+            <tr *ngFor="let player of getUsedPlayers()">
               <td width="30"><a><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a></td>
               <td>
                 <img [attr.src]="player.teamLogo" alt="team_logo"
@@ -79,7 +91,7 @@
               <td>{{player.position}}</td>
               <td>{{player.fullName}}</td>
               <td>{{getBattingOrderByPlayerId(player.id)}}<span class="light-dot green-dot"></span></td>
-              <td><b>{{getOpponentNameByPlayerId(player.id)}}</b>@{{getHomeTeamByPlayerId(player.id)}}</td>
+              <td>{{getOpponentNameByPlayerId(player.id)}}@<b>{{getHomeTeamByPlayerId(player.id)}}</b></td>
               <td>{{player.fppg.toFixed(2)}}</td>
               <td>${{player.salary}}</td>
             </tr>
