css issue fixed

--- a/src/app/user/components/footer/user-footer.component.html
+++ b/src/app/user/components/footer/user-footer.component.html
@@ -5,6 +5,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 topFooterWrapper">
           <h1 class="footerHdin">About Us</h1>
           <a href="#" class="logoWrapper"><img src="../../../../assets/images/logo.png" alt="LOGO"
+                                               style="margin: 0"
                                                class="img-responsive"/></a>
           <p class="footerPara">Lorem Ipsum is simply dummy text of the printing and typesetting Ipsum is simply dummy
             text of the printing .Lorem Ipsum is simply dummy text of the printing and typesetting Ipsum is simply dummy
