--- a/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
+++ b/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
@@ -80,7 +80,7 @@
               </select>
             </div>
             <div class="col-sm-3 no-padding-right">
-              <input class="form-control input-sm" type="text" value="06/07/2017">
+              <span>9 July, 2017</span>
             </div>
             <div class="col-md-4 col-sm-5">
               <a class="btn btn-lg btn-yellow-black btn-noradius btn-block" (click)="onBtnGenerateLineupClick()">Generate
