$ symbol added to the total salary value in generated Line up page.

--- a/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
+++ b/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
@@ -109,7 +109,7 @@
             </div>
             <div class="col-sm-5 text-right">
               <div class="total-val"><span>{{lineup.totalFantasyPoints.toFixed(2)}}</span></div>
-              <div class="total-val"><span>${{lineup.totalSalary}}</span></div>
+              <div class="total-val"><span>{{'$'+lineup.totalSalary}}</span></div>
             </div>
           </div>
           <div class="row table-footer-draft">
