--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -53,7 +53,7 @@
                 <a routerLink="">Home<span class="sr-only">(current)</span></a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-                <a target="_blank" href="http://forum.dfsportgod.com/forum/">Forums</a>
+                <a target="_blank" href="http://forum.rotopros.com/">Forums</a>
               </li>
               <li><a>Products</a></li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
