--- a/src/app/front/components/lineup-optimizer/lineup-optimizer.component.css
+++ b/src/app/front/components/lineup-optimizer/lineup-optimizer.component.css
@@ -14,8 +14,19 @@ img {
 }
 
 section {
-  padding: 15px ;
+  padding: 15px;
   margin-left: -15px;
   margin-right: -15px;
-  margin-bottom: 1px ;
+  margin-bottom: 1px;
+}
+
+.lineup-table tr th {
+  background-color: #e6e6e6;
+  border-right: 1px solid #cbcbcb;
+  padding: 15px 10px;
+}
+
+.lineup-table tr td {
+  border-right: 1px solid #cbcbcb;
+  padding: 8px 10px;
 }
