--- a/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
+++ b/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
@@ -8,27 +8,21 @@
 
     <section class="my-section title-container">
       <div class="row">
-        <div class="col-lg-5">
+        <div class="col-md-6">
           <h4 class="content-title">Lineup Optimizer</h4>
         </div>
-        <div class="col-lg-3 col-sm-5 col-border-b">
-          <a class="btn"
-             (click)="operatorChanged('FanDuel')"
-             [class.btn-gray-black]="selectedOperator != 'FanDuel'"
-             [class.btn-yellow-black]="selectedOperator == 'FanDuel'">FanDuel</a>
-          <a class="btn"
-             (click)="operatorChanged('DraftKings')"
-             [class.btn-gray-black]="selectedOperator != 'DraftKings'"
-             [class.btn-yellow-black]="selectedOperator=='DraftKings'">DraftKings</a>
-        </div>
-        <div class="col-lg-1 col-sm-2 col-border-b">
-
-        </div>
-        <div class="col-lg-3 col-sm-5 text-right">
+        <div class="col-md-6 text-right">
+          <span style="padding-right: 20px">
+            <a class="btn"
+               (click)="operatorChanged('DraftKings')"
+               [class.btn-gray-black]="selectedOperator != 'DraftKings'"
+               [class.btn-yellow-black]="selectedOperator=='DraftKings'">DraftKings</a>
+            <a class="btn"
+               (click)="operatorChanged('FanDuel')"
+               [class.btn-gray-black]="selectedOperator != 'FanDuel'"
+               [class.btn-yellow-black]="selectedOperator == 'FanDuel'">FanDuel</a>
+          </span>
           <a class="btn btn-gray-black" data-toggle="modal" data-target="#advance-feature-filters">Settings</a>
-          <!--<a class="btn btn-gray-black active">All</a>
-          <a class="btn btn-gray-black">My Pool</a>
-          <a class="btn btn-gray-black">Daily Lineups</a>-->
         </div>
       </div>
     </section>
@@ -71,13 +65,13 @@
           <div class="row">
             <div class="col-md-5 col-sm-4 no-padding-right">
               <!-- input class="form-control input-sm" type="text" placeholder="Select Projection"-->
-              <select class="form-control input-sm">
+              <!--<select class="form-control input-sm">
                 <option>Select Projection</option>
                 <option>Projection 1</option>
                 <option>Projection 3</option>
                 <option>Projection 4</option>
                 <option>Projection 5</option>
-              </select>
+              </select>-->
             </div>
             <div class="col-sm-3 no-padding-right">
               <input class="form-control input-sm" type="text" value="9 July, 2017">
@@ -94,7 +88,7 @@
 
     <!-- Table -->
     <section class="my-section table-container table-responsive">
-      <table class="table main-table table-striped td-center" [mfData]="players" #records="mfDataTable"
+      <table class="table main-table table-striped td-center lineup-table" [mfData]="players" #records="mfDataTable"
              [mfRowsOnPage]="10">
         <thead>
         <tr>
