--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -12,7 +12,13 @@
               <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
                                                  class="img-responsive"/></span><span>Login</span></h3>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              <p *ngIf="msg">{{msg}}</p>
+              <div class="alert alert-success fade in" *ngIf="msg">
+                {{msg}}
+              </div>
+              <div class="alert alert-warning fade in" *ngIf="isError">
+                {{errorMsg }}
+                <a routerLink="['verify','verify']" *ngIf="showVerifyLink"> Get verification link</a>
+              </div>
               <form [formGroup]="loginForm">
                 <div class="form-group">
                   <label class="srOnly">Email</label>
