--- a/src/app/front/components/provider-public/public.component.html
+++ b/src/app/front/components/provider-public/public.component.html
@@ -1,4 +1,4 @@
-s<div *ngIf="userRole != 'provider'"> 
+<div *ngIf="userRole != 'provider'"> 
     <section class="sectionHedin">
     	<div class="container ">
             <div class="row">
@@ -24,7 +24,7 @@ s<div *ngIf="userRole != 'provider'">
                         </ul>
                         <div class="linUpFrm">
                         	<div class="form-group slctWrapper">
-                                <label class="srOnly">Filter By Year</label>
+                                <label class="srOnly">Filter By Slate</label>
                                 <div class="dropdownSelect">
                                 	<a  href="javascript:void(0)" class="dropdownSelectClick form-control">{{currentSlate}}</a>
                                     <ul class="dropdownSelectMenu">
@@ -32,41 +32,52 @@ s<div *ngIf="userRole != 'provider'">
                                     </ul>
                                 </div>
                             </div>
+                            <div class="form-group slctWrapper">
+                                <label class="srOnly">Filter By Year</label>
+                                <div class="dropdownSelect">
+                                    <a  href="javascript:void(0)" class="dropdownSelectClick form-control">Filter By Year</a>
+                                    <ul class="dropdownSelectMenu">
+                                        <li><a href="javascript:void(0)" (click)="currentFilter = 1;">Filter By Year</a></li>
+                                        <li><a href="javascript:void(0)" (click)="currentFilter = 2;">Filter By Month</a></li>
+                                        <li><a href="javascript:void(0)" (click)="currentFilter = 3;">Filter By Week</a></li>
+                                    </ul>
+                                </div>
+                            </div>
                             
                             <div class="form-group dteWrapper">
-                                <input type="text" class="form-control datepicker" name="dateFrom" placeholder="Date">
+                                <input type="text" class="form-control datepicker" name="dateFrom" placeholder="Date" value="{{currentDateStr}}">
                             </div>
                             
                             <div class="form-group clearfix">
                             	<div class="form-group">
-                                    <button type="button" class="form-control">Prev</button>
+                                    <button type="button" class="form-control" (click)="setDate(false);">Prev</button>
                                 </div>
                                 <div class="form-group">
-                                     <button type="button" class="form-control">Next</button>
+                                     <button type="button" class="form-control" (click)="setDate(true);">Next</button>
                                 </div>
+
+                                <input type="button" (click)="getFilteredHiddenLineups();" value="GetLineups" />
                             </div>
-                            
-                            
                         </div>
                         <!-- Tab panes -->
                         <div class="tab-content">                            
                             <div role="tabpanel" class="tab-pane active" id="NFL">
                             
-                           		<div class="lneUpSection clearfix">
+                           		<div *ngFor="let currLineup of currPageHiddenLineups" class="lneUpSection clearfix">
                                 	<div class="lneUpSecLft">
                                     	<div class="lneUpImgBx">
-                                        	<img src="images/dashboard_profile_img.png" alt="" class="img-responsive">
+                                        	<img src="assets/images/dashboard_profile_img.png" alt="" class="img-responsive">
                                         </div>
                                         <div class="lneUpNameBx">
-                                        	<p>Derek backwith</p>
-                                            <a href="javascript:void(0)">Download Lineup</a>
+                                        	<p>{{currLineup['ProviderName']}}</p>
+                                            <a href="javascript:void(0)" (click)="downloadLineup(currLineup['_id']);">Download Lineup</a>
                                         </div>
                                         <div class="lneUpIcn">
-                                        	<img src="images/a_icn.png" alt="" class="img-responsive">
+                                        	<img src="assets/images/a_icn.png" alt="" class="img-responsive">
                                         </div>
                                     </div>
                                     <div class="lneUpSecRght">
-                                    	<h4 class="lneUpHedin">Lineup Name </h4>
+                                    	<h4 class="lneUpHedin">{{currLineup['LineupName']}}</h4>
                                         <div class="tFormat">
                                             <div class="table-responsive">
                                                 <table cellspacing="0" cellpadding="0" border="0">
@@ -146,14 +157,13 @@ s<div *ngIf="userRole != 'provider'">
                                 </div>   
                                 <div class="pagination">
                                     <ul>
-                                        <li><a href="javascript:void(0)"><span aria-hidden="true">«</span></a></li>
-                                        <li class="active"><a href="javascript:void(0)">1</a></li>
-                                        <li><a href="javascript:void(0)">2</a></li>
-                                        <li><a href="javascript:void(0)">3</a></li>
-                                        <li><a href="javascript:void(0)">...</a></li>
-                                        <li><a href="javascript:void(0)">29</a></li>
-                                        <li><a href="javascript:void(0)">30</a></li>
-                                        <li><a href="javascript:void(0)"><span aria-hidden="true">»</span></a></li>
+                                        <li (click)="currentLineupsPage = 1; showPagination();"><a href="javascript:void(0)"><span aria-hidden="true">«</span></a></li>
+                                    </ul>
+                                    <ul *ngFor="let page of pagesToShow">
+                                        <li [ngClass]="{'active': currentLineupsPage == page}" (click)="currentLineupsPage = (page < 0 ? -page : page); showPagination();"><a href="javascript:void(0)">{{(page < 0) ? '...' : page}}</a></li>
+                                    </ul>
+                                    <ul>
+                                        <li (click)="currentLineupsPage = numHiddenLineupPages; showPagination();"><a href="javascript:void(0)"><span aria-hidden="true">»</span></a></li>
                                     </ul>
                                 </div>
                             </div>
